css/main.css
section.y {
 align: center;
 text-align: center;
 font-style: italic;
 box-sizing: border-box;
 width: 90%;
 max-width: 1080px;
 padding: 30px 15px;
 margin: 0 auto;
 position: relative;
 overflow: hidden;
 border-radius: 5px;
 box-shadow: 0 2px 0 0 #787b87;
 background-color: white;
 transition: 0.3s;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

section.pain {
padding-top: 1em;
 text-align: center;
 font-style: italic;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
} 

html {
 background-color: #668d99;
 background-image: url("https://upload.wikimedia.org/wikipedia/commons/8/87/LH_95.jpg");
 background-position: center;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;
}

